--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   provider: ^6.0.0
   flutter_slidable: ^3.1.0
   flutter_svg: ^2.0.10+1
+  icons_flutter: ^0.0.4
 
 dev_dependencies:
   flutter_test:
