--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/morning_picture.png
+    - assets/images/afternoon_picture.png
+    - assets/images/evening_picture.png
+    - assets/images/anytime_picture.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
