--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   flutter_launcher_icons: ^0.13.1
+  awesome_notifications_core: ^0.9.3
+  awesome_notifications: any
+  workmanager: ^0.5.2
 
 dev_dependencies:
   flutter_test:
