--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   awesome_notifications_core: ^0.9.3
   awesome_notifications: any
   workmanager: ^0.5.2
+  numberpicker: ^2.1.2
 
 dev_dependencies:
   flutter_test:
