--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   awesome_notifications: any
   workmanager: ^0.5.2
   numberpicker: ^2.1.2
+  firebase_core: ^3.1.1
 
 dev_dependencies:
   flutter_test:
