--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   workmanager: ^0.5.2
   numberpicker: ^2.1.2
   firebase_core: ^3.1.1
+  firebase_auth: ^5.1.1
+  fluttertoast: ^8.2.6
 
 dev_dependencies:
   flutter_test:
