--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   firebase_core: ^3.1.1
   firebase_auth: ^5.1.1
   fluttertoast: ^8.2.6
+  firebase_storage: ^12.1.0
 
 dev_dependencies:
   flutter_test:
