--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   firebase_auth: ^5.1.1
   fluttertoast: ^8.2.6
   firebase_storage: ^12.1.0
+  path_provider: ^2.1.3
 
 dev_dependencies:
   flutter_test:
