--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   fluttertoast: ^8.2.6
   firebase_storage: ^12.1.0
   path_provider: ^2.1.3
+  restart_app: ^1.2.1
 
 dev_dependencies:
   flutter_test:
