--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   firebase_storage: ^12.1.0
   path_provider: ^2.1.3
   restart_app: ^1.2.1
+  disable_battery_optimization: ^1.1.1
 
 dev_dependencies:
   flutter_test:
