--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   path_provider: ^2.1.3
   restart_app: ^1.2.1
   disable_battery_optimization: ^1.1.1
+  flutter_spinbox: ^0.13.1
 
 dev_dependencies:
   flutter_test:
