--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   restart_app: ^1.2.1
   disable_battery_optimization: ^1.1.1
   flutter_spinbox: ^0.13.1
+  audioplayers: ^6.0.0
 
 dev_dependencies:
   flutter_test:
@@ -83,6 +84,8 @@ flutter:
     - assets/images/evening_picture.png
     - assets/images/anytime_picture.png
     - assets/images/ic_launcher.png
+    - assets/sound/complete1.mp3
+    - assets/sound/complete2.mp3
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
