--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   disable_battery_optimization: ^1.1.1
   flutter_spinbox: ^0.13.1
   audioplayers: ^6.0.0
+  vibration: ^1.9.0
 
 dev_dependencies:
   flutter_test:
