--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   flutter_spinbox: ^0.13.1
   audioplayers: ^6.0.0
   vibration: ^1.9.0
+  table_calendar: ^3.1.2
 
 dev_dependencies:
   flutter_test:
