--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   google_mobile_ads: ^5.1.0
   collection: ^1.18.0
   auto_size_text: ^3.0.0
+  google_sign_in: ^6.2.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
