--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   collection: ^1.18.0
   auto_size_text: ^3.0.0
   google_sign_in: ^6.2.1
+  icons_plus: ^5.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
