--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   auto_size_text: ^3.0.0
   google_sign_in: ^6.2.1
   icons_plus: ^5.0.0
+  flutter_facebook_auth: ^6.0.4
 dev_dependencies:
   flutter_test:
     sdk: flutter
