--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -50,15 +50,15 @@ android {
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
         minSdkVersion 23
         targetSdkVersion 34
-        versionCode 2
-        versionName "1.0.1"
+        versionCode 3
+        versionName "1.0.2"
     }
 
     signingConfigs {
         release {
-            keyAlias 'habit_tracker_key_alias'  // Your key alias
+            keyAlias 'habitt-key-alias'  // Your key alias
             keyPassword '2005JimsH'     // Your key password
-            storeFile file('C:/Users/ibrsb/OneDrive/Dokumenti/habit_tracker_key.jks')  // Path to your keystore
+            storeFile file("C:/Flutter SDK/flutterapps/habit_tracker/habitt-release-key.keystore")  // Path to your keystore
             storePassword '2005JimsH'  // Your keystore password
         }
     }
