--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   google_sign_in: ^6.2.1
   icons_plus: ^5.0.0
   flutter_facebook_auth: ^6.0.4
+  lottie: ^3.1.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
