--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   icons_plus: ^5.0.0
   flutter_facebook_auth: ^6.0.4
   lottie: ^3.1.2
+  smooth_page_indicator: ^1.2.0+3
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -87,10 +88,11 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/morning_picture.png
-    - assets/images/afternoon_picture.png
-    - assets/images/evening_picture.png
-    - assets/images/anytime_picture.png
+    - assets/images/Welcome.json
+    - assets/images/Add.json
+    - assets/images/Calendar.json
+    - assets/images/Notifications.json
+    - assets/images/Done.json
     - assets/images/ic_launcher.png
     - assets/sound/complete3.mp3
 
