--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   flutter_facebook_auth: ^6.0.4
   lottie: ^3.1.2
   smooth_page_indicator: ^1.2.0+3
+  animated_digit: ^3.2.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
