--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   lottie: ^3.1.2
   smooth_page_indicator: ^1.2.0+3
   animated_digit: ^3.2.3
+  fl_chart: ^0.69.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
