--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
         android:label="habitt"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
+        android:extractNativeLibs="true"
         <activity
             android:name=".MainActivity"
             android:exported="true"
