--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,9 @@ dependencies:
   google_sign_in: ^6.2.1
   icons_plus: ^5.0.0
   flutter_launcher_icons: 0.14.1
+  http: ^1.2.2
+  googleapis: any
+  googleapis_auth: any
 
 
 dev_dependencies:
