--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,8 @@ dependencies:
   http: ^1.2.2
   googleapis: any
   googleapis_auth: any
+  flutter_localization: ^0.2.2
+  intl: ^0.19.0
 
 
 dev_dependencies:
