--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ dependencies:
   googleapis_auth: any
   flutter_localization: ^0.2.2
   intl: ^0.19.0
+  flutter_email_sender: ^6.0.3
 
 
 dev_dependencies:
